--- a/demo/02. Methods/05. Optimal Top N.ipynb
+++ b/demo/02. Methods/05. Optimal Top N.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','integration','fixtures'))\n",
+    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
     "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
     "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
    ]
@@ -147,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(23.600s) ms_level=1 N=3 DEW=15:   2%|█▉                                                                                                                      | 23.59999999999998/1440 [00:00<00:10, 141.61it/s]"
+      "(14.800s) ms_level=1 N=3 DEW=15:   1%|█▌                                                                                                                                                   | 14.800000000000008/1440 [00:00<00:16, 87.85it/s]"
      ]
     },
     {
@@ -168,10 +168,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000672/1440 [00:23<00:00, 61.53it/s]\n",
-      "2020-08-21 16:49:44.850 | DEBUG    | vimms.Environment:write_mzML:163 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_0.mzML\n",
-      "2020-08-21 16:49:51.633 | DEBUG    | vimms.Environment:write_mzML:170 - mzML file successfully written!\n",
-      "(24.000s) ms_level=1 N=3 DEW=15:   2%|█▉                                                                                                                      | 23.99999999999998/1440 [00:00<00:10, 133.68it/s]"
+      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000672/1440 [00:44<00:00, 32.59it/s]\n",
+      "2020-09-03 15:46:52.245 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_0.mzML\n",
+      "2020-09-03 15:47:08.656 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n",
+      "(10.800s) ms_level=1 N=3 DEW=15:   1%|█                                                                                                                                                    | 10.800000000000004/1440 [00:00<00:21, 67.47it/s]"
      ]
     },
     {
@@ -185,10 +185,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:24<00:00, 58.47it/s]\n",
-      "2020-08-21 16:50:16.261 | DEBUG    | vimms.Environment:write_mzML:163 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_1.mzML\n",
-      "2020-08-21 16:50:21.826 | DEBUG    | vimms.Environment:write_mzML:170 - mzML file successfully written!\n",
-      "(25.600s) ms_level=1 N=3 DEW=15:   2%|██                                                                                                                     | 25.599999999999973/1440 [00:00<00:10, 133.65it/s]"
+      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:47<00:00, 30.01it/s]\n",
+      "2020-09-03 15:47:56.632 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_1.mzML\n",
+      "2020-09-03 15:48:04.801 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n",
+      "(18.000s) ms_level=1 N=3 DEW=15:   1%|██                                                                                                                                                                | 18.0/1440 [00:00<00:13, 107.82it/s]"
      ]
     },
     {
@@ -202,10 +202,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:23<00:00, 60.53it/s]\n",
-      "2020-08-21 16:50:45.615 | DEBUG    | vimms.Environment:write_mzML:163 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_2.mzML\n",
-      "2020-08-21 16:50:51.335 | DEBUG    | vimms.Environment:write_mzML:170 - mzML file successfully written!\n",
-      "(21.600s) ms_level=1 N=3 DEW=15:   1%|█▊                                                                                                                     | 21.599999999999987/1440 [00:00<00:12, 113.59it/s]"
+      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:33<00:00, 42.48it/s]\n",
+      "2020-09-03 15:48:38.697 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_2.mzML\n",
+      "2020-09-03 15:48:45.470 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n",
+      "(18.000s) ms_level=1 N=3 DEW=15:   1%|██                                                                                                                                                                | 18.0/1440 [00:00<00:13, 106.58it/s]"
      ]
     },
     {
@@ -219,10 +219,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000536/1440 [00:26<00:00, 55.15it/s]\n",
-      "2020-08-21 16:51:17.446 | DEBUG    | vimms.Environment:write_mzML:163 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_3.mzML\n",
-      "2020-08-21 16:51:22.879 | DEBUG    | vimms.Environment:write_mzML:170 - mzML file successfully written!\n",
-      "(25.600s) ms_level=1 N=3 DEW=15:   2%|██                                                                                                                     | 25.599999999999973/1440 [00:00<00:09, 145.45it/s]"
+      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000536/1440 [00:33<00:00, 42.49it/s]\n",
+      "2020-09-03 15:49:19.362 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_3.mzML\n",
+      "2020-09-03 15:49:26.437 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n",
+      "(18.000s) ms_level=1 N=3 DEW=15:   1%|██                                                                                                                                                                | 18.0/1440 [00:00<00:13, 103.59it/s]"
      ]
     },
     {
@@ -236,7 +236,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(715.200s) ms_level=1 N=3 DEW=15:  50%|███████████████████████████████████████████████████████████▌                                                            | 715.1999999999765/1440 [00:15<00:15, 46.96it/s]"
+      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:33<00:00, 42.63it/s]\n",
+      "2020-09-03 15:50:00.211 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_4.mzML\n",
+      "2020-09-03 15:50:07.303 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
      ]
     }
    ],
