--- a/demo/02. Methods/07. WeightedDEW.ipynb
+++ b/demo/02. Methods/07. WeightedDEW.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','integration','fixtures'))\n",
+    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
     "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
     "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
    ]
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.000s) ms_level=2 N=10 DEW=20: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.800000000147/1440 [00:45<00:00, 31.38it/s]\n"
+      "(1440.000s) ms_level=2 N=10 DEW=20: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.800000000147/1440 [00:50<00:00, 28.50it/s]\n"
      ]
     }
    ],
@@ -159,16 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-30 15:30:38.684 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\weighteddew_controller.mzML\n",
-      "2020-07-30 15:30:38.685 | INFO     | vimms.Common:create_if_not_exist:52 - Created C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\n",
-      "2020-07-30 15:31:01.099 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-09-03 15:47:42.311 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\weighteddew_controller.mzML\n",
+      "2020-09-03 15:47:59.234 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
      ]
     }
    ],
