--- a/demo/02. Methods/02. Top N.ipynb
+++ b/demo/02. Methods/02. Top N.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','integration','fixtures'))\n",
+    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
     "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
     "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
    ]
@@ -132,7 +132,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.130s) ms_level=2 N=3 DEW=15: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.9968469999974/1440 [02:33<00:00,  9.36it/s]\n"
+      "(1440.200s) ms_level=1 N=3 DEW=15: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.800000000092/1440 [00:33<00:00, 42.61it/s]\n"
      ]
     }
    ],
@@ -163,8 +163,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-17 16:47:05.549 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\topn_controller.mzML\n",
-      "2020-07-17 16:49:59.376 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-09-03 15:43:46.252 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\topn_controller.mzML\n",
+      "2020-09-03 15:43:56.718 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.055s) ms_level=1 N=20 DEW=120: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.7351859999885/1440 [02:50<00:00,  8.46it/s]\n"
+      "(1440.200s) ms_level=1 N=20 DEW=120: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000000757/1440 [00:30<00:00, 46.54it/s]\n"
      ]
     }
    ],
@@ -257,8 +257,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-17 16:52:50.130 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\topnvaried_controller.mzML\n",
-      "2020-07-17 16:52:57.556 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-09-03 15:44:28.230 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\topnvaried_controller.mzML\n",
+      "2020-09-03 15:44:37.163 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
      ]
     }
    ],
