--- a/demo/02. Methods/04. SmartROI.ipynb
+++ b/demo/02. Methods/04. SmartROI.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','integration','fixtures'))\n",
+    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
     "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
     "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
    ]
@@ -142,7 +142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.141s) ms_level=1 N=10 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8732919999936/1440 [02:30<00:00,  9.58it/s]\n"
+      "(1440.200s) ms_level=1 N=10 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001155/1440 [00:38<00:00, 37.31it/s]\n"
      ]
     }
    ],
@@ -173,8 +173,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-17 16:54:48.122 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\smartroi_controller.mzML\n",
-      "2020-07-17 16:57:41.863 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-09-03 15:46:00.720 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\smartroi_controller.mzML\n",
+      "2020-09-03 15:46:15.402 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
      ]
     }
    ],
