--- a/demo/02. Methods/06. Purity.ipynb
+++ b/demo/02. Methods/06. Purity.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','integration','fixtures'))\n",
+    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
     "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
     "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
    ]
@@ -149,7 +149,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.009s) ms_level=2 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.9365159999988/1440 [02:25<00:00,  9.92it/s]\n"
+      "(1440.200s) ms_level=1 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000001005/1440 [00:48<00:00, 29.88it/s]\n"
      ]
     }
    ],
@@ -180,8 +180,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-17 17:02:09.231 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\purity_controller.mzML\n",
-      "2020-07-17 17:05:06.790 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-09-03 15:47:17.271 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\purity_controller.mzML\n",
+      "2020-09-03 15:47:35.411 | DEBUG    | vimms.Environment:write_mzML:164 - mzML file successfully written!\n"
      ]
     }
    ],
