--- a/demo/03. MultiSampleMethods/02. Grid Search.ipynb
+++ b/demo/03. MultiSampleMethods/02. Grid Search.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -29,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.join(os.path.abspath(os.path.join(os.path.join(os.getcwd(),\"..\"),\"..\")),'tests','integration','fixtures')\n",
+    "data_dir = os.path.join(os.path.abspath(os.path.join(os.path.join(os.getcwd(),\"..\"),\"..\")),'tests','fixtures')\n",
     "dataset_file = os.path.join(data_dir, 'QCB_22May19_1.p')\n",
     "dataset = load_obj(dataset_file)\n",
     "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,15 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-08-07 17:01:11.626 | INFO     | vimms.PythonMzmine:pick_peaks:23 - Creating xml batch file for Beer_multibeers_1_fullscan1.mzML\n",
-      "2020-08-07 17:01:11.629 | INFO     | vimms.PythonMzmine:pick_peaks:53 - Running mzMine for Beer_multibeers_1_fullscan1.mzML\n"
+      "2020-09-03 16:11:14.064 | INFO     | vimms.PythonMzmine:pick_peaks:23 - Creating xml batch file for Beer_multibeers_1_fullscan1.mzML\n",
+      "2020-09-03 16:11:14.085 | INFO     | vimms.PythonMzmine:pick_peaks:53 - Running mzMine for Beer_multibeers_1_fullscan1.mzML\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-25af15b30928>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m pick_peaks([mzml_file], xml_template=QCB_XML_TEMPLATE_MS1, output_dir=os.getcwd(),\n\u001b[1;32m----> 2\u001b[1;33m                        mzmine_command=mzmine_command)\n\u001b[0m",
+      "\u001b[1;32m~\\work\\vimms\\vimms\\PythonMzmine.py\u001b[0m in \u001b[0;36mpick_peaks\u001b[1;34m(file_list, xml_template, output_dir, mzmine_command, add_name)\u001b[0m\n\u001b[0;32m     52\u001b[0m         \u001b[1;31m# Run mzmine\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m         \u001b[0mlogger\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Running mzMine for {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 54\u001b[1;33m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmzmine_command\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' \"{}\"'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_xml_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     55\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -239,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,53 +292,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-08-07 17:33:04.398 | INFO     | vimms.SequenceManager:run:246 - Running in serial mode\n",
-      "2020-08-07 17:33:04.399 | INFO     | vimms.SequenceManager:run_controller:202 - Begun experiment: sample0\n",
-      "2020-08-07 17:33:04.599 | INFO     | vimms.SequenceManager:run_experiment:183 - Experiment already completed. Skipping...\n",
-      "2020-08-07 17:33:04.600 | INFO     | vimms.SequenceManager:run_controller:206 - Completed experiment: sample0\n",
-      "2020-08-07 17:33:04.600 | INFO     | vimms.SequenceManager:run_evaluation:216 - Started Evaluation: sample0\n"
+      "2020-09-03 16:44:39.801 | INFO     | vimms.SequenceManager:run:237 - Running in serial mode\n",
+      "2020-09-03 16:44:39.803 | INFO     | vimms.SequenceManager:run_controller:190 - Begun experiment: sample0\n",
+      "2020-09-03 16:44:40.005 | INFO     | vimms.SequenceManager:run_experiment:156 - {'Sample ID': {0: 'sample0'}, 'Controller Method': {0: 'TopNController'}, 'Controller Params': {0: {'ionisation_mode': 'Positive', 'N': 10, 'isolation_width': 1, 'mz_tol': 10, 'rt_tol': 15, 'min_ms1_intensity': 175000.0, 'ms1_shift': 0, 'initial_exclusion_list': None, 'ms1_agc_target': 200000, 'ms1_max_it': 250, 'ms1_collision_energy': 0, 'ms1_orbitrap_resolution': 120000, 'ms1_activation_type': 'HCD', 'ms1_mass_analyser': 'Orbitrap', 'ms1_isolation_mode': 'Quadrupole', 'ms2_agc_target': 30000, 'ms2_max_it': 100, 'ms2_collision_energy': 25, 'ms2_orbitrap_resolution': 7500, 'ms2_activation_type': 'HCD', 'ms2_mass_analyser': 'Orbitrap', 'ms2_isolation_mode': 'Quadrupole'}}, 'MassSpec Params': {0: {'ionisation_mode': 'Positive', 'peak_sampler': <vimms.DataGenerator.PeakSampler object at 0x0000020CA5384320>, 'add_noise': False, 'isolation_transition_window': 'rectangular', 'isolation_transition_window_params': None}}, 'Dataset': {0: 'C:\\\\Users\\\\Vinny\\\\work\\\\vimms\\\\tests\\\\fixtures\\\\QCB_22May19_1.p'}}\n",
+      "(1440.200s) ms_level=1 N=10 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8000000000936/1440 [00:36<00:00, 39.25it/s]\n",
+      "2020-09-03 16:45:27.625 | INFO     | vimms.SequenceManager:run_controller:194 - Completed experiment: sample0\n",
+      "2020-09-03 16:45:27.626 | INFO     | vimms.SequenceManager:run_evaluation:204 - Started Evaluation: sample0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 4383 scans\n"
+      "False\n",
+      "Loaded 4228 scans\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-08-07 17:33:09.129 | INFO     | vimms.SequenceManager:run_evaluation:218 - Completed Evaluation: sample0\n",
-      "2020-08-07 17:33:09.130 | INFO     | vimms.SequenceManager:run_serial:258 - Finished 0\n",
-      "2020-08-07 17:33:09.131 | INFO     | vimms.SequenceManager:run_controller:202 - Begun experiment: sample1\n",
-      "2020-08-07 17:33:09.333 | INFO     | vimms.SequenceManager:run_experiment:167 - {'Sample ID': {1: 'sample1'}, 'Controller Method': {1: 'TopNController'}, 'Controller Params': {1: {'ionisation_mode': 'Positive', 'N': 10, 'isolation_width': 1, 'mz_tol': 10, 'rt_tol': 30, 'min_ms1_intensity': 175000.0, 'ms1_shift': 0.0, 'ms1_agc_target': 200000.0, 'ms1_max_it': 250.0, 'ms1_collision_energy': 0.0, 'ms1_orbitrap_resolution': 120000.0, 'ms2_agc_target': 30000.0, 'ms2_max_it': 100.0, 'ms2_collision_energy': 25.0, 'ms2_orbitrap_resolution': 7500.0}}, 'MassSpec Params': {1: {'ionisation_mode': 'Positive', 'peak_sampler': <vimms.DataGenerator.PeakSampler object at 0x0000020295A5C2E8>, 'add_noise': False, 'isolation_transition_window': 'rectangular', 'isolation_transition_window_params': None}}, 'Dataset': {1: 'C:\\\\Users\\\\Vinny\\\\work\\\\vimms\\\\tests\\\\integration\\\\fixtures\\\\QCB_22May19_1.p'}}\n",
-      "(1440.000s) ms_level=1 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000813/1440 [00:34<00:00, 41.32it/s]\n",
-      "2020-08-07 17:33:53.927 | INFO     | vimms.SequenceManager:run_controller:206 - Completed experiment: sample1\n",
-      "2020-08-07 17:33:53.928 | INFO     | vimms.SequenceManager:run_evaluation:216 - Started Evaluation: sample1\n"
+      "2020-09-03 16:45:32.928 | INFO     | vimms.SequenceManager:run_evaluation:206 - Completed Evaluation: sample0\n",
+      "2020-09-03 16:45:32.930 | INFO     | vimms.SequenceManager:run_serial:249 - Finished 0\n",
+      "2020-09-03 16:45:32.930 | INFO     | vimms.SequenceManager:run_controller:190 - Begun experiment: sample1\n",
+      "2020-09-03 16:45:33.131 | INFO     | vimms.SequenceManager:run_experiment:156 - {'Sample ID': {1: 'sample1'}, 'Controller Method': {1: 'TopNController'}, 'Controller Params': {1: {'ionisation_mode': 'Positive', 'N': 10, 'isolation_width': 1, 'mz_tol': 10, 'rt_tol': 30, 'min_ms1_intensity': 175000.0, 'ms1_shift': 0, 'initial_exclusion_list': None, 'ms1_agc_target': 200000, 'ms1_max_it': 250, 'ms1_collision_energy': 0, 'ms1_orbitrap_resolution': 120000, 'ms1_activation_type': 'HCD', 'ms1_mass_analyser': 'Orbitrap', 'ms1_isolation_mode': 'Quadrupole', 'ms2_agc_target': 30000, 'ms2_max_it': 100, 'ms2_collision_energy': 25, 'ms2_orbitrap_resolution': 7500, 'ms2_activation_type': 'HCD', 'ms2_mass_analyser': 'Orbitrap', 'ms2_isolation_mode': 'Quadrupole'}}, 'MassSpec Params': {1: {'ionisation_mode': 'Positive', 'peak_sampler': <vimms.DataGenerator.PeakSampler object at 0x0000020CA5384320>, 'add_noise': False, 'isolation_transition_window': 'rectangular', 'isolation_transition_window_params': None}}, 'Dataset': {1: 'C:\\\\Users\\\\Vinny\\\\work\\\\vimms\\\\tests\\\\fixtures\\\\QCB_22May19_1.p'}}\n",
+      "(1440.000s) ms_level=1 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000813/1440 [00:38<00:00, 36.97it/s]\n",
+      "2020-09-03 16:46:23.768 | INFO     | vimms.SequenceManager:run_controller:194 - Completed experiment: sample1\n",
+      "2020-09-03 16:46:23.769 | INFO     | vimms.SequenceManager:run_evaluation:204 - Started Evaluation: sample1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 4147 scans\n"
+      "False\n",
+      "Loaded 4040 scans\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-08-07 17:33:58.254 | INFO     | vimms.SequenceManager:run_evaluation:218 - Completed Evaluation: sample1\n",
-      "2020-08-07 17:33:58.256 | INFO     | vimms.SequenceManager:run_serial:258 - Finished 1\n"
+      "2020-09-03 16:46:27.585 | INFO     | vimms.SequenceManager:run_evaluation:206 - Completed Evaluation: sample1\n",
+      "2020-09-03 16:46:27.587 | INFO     | vimms.SequenceManager:run_serial:249 - Finished 1\n"
      ]
     },
     {
@@ -366,14 +372,19 @@
        "      <th>rt_tol</th>\n",
        "      <th>min_ms1_intensity</th>\n",
        "      <th>ms1_shift</th>\n",
+       "      <th>initial_exclusion_list</th>\n",
        "      <th>ms1_agc_target</th>\n",
        "      <th>ms1_max_it</th>\n",
-       "      <th>ms1_collision_energy</th>\n",
-       "      <th>ms1_orbitrap_resolution</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ms1_mass_analyser</th>\n",
+       "      <th>ms1_isolation_mode</th>\n",
        "      <th>ms2_agc_target</th>\n",
        "      <th>ms2_max_it</th>\n",
        "      <th>ms2_collision_energy</th>\n",
        "      <th>ms2_orbitrap_resolution</th>\n",
+       "      <th>ms2_activation_type</th>\n",
+       "      <th>ms2_mass_analyser</th>\n",
+       "      <th>ms2_isolation_mode</th>\n",
        "      <th>mzmine_peak</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -386,16 +397,21 @@
        "      <td>10</td>\n",
        "      <td>15</td>\n",
        "      <td>175000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>200000.0</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>30000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>7500.0</td>\n",
-       "      <td>129.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>250</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Orbitrap</td>\n",
+       "      <td>Quadrupole</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>100</td>\n",
+       "      <td>25</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>HCD</td>\n",
+       "      <td>Orbitrap</td>\n",
+       "      <td>Quadrupole</td>\n",
+       "      <td>117.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -405,19 +421,25 @@
        "      <td>10</td>\n",
        "      <td>30</td>\n",
        "      <td>175000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>200000.0</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>30000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>7500.0</td>\n",
-       "      <td>101.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>250</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Orbitrap</td>\n",
+       "      <td>Quadrupole</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>100</td>\n",
+       "      <td>25</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>HCD</td>\n",
+       "      <td>Orbitrap</td>\n",
+       "      <td>Quadrupole</td>\n",
+       "      <td>90.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -425,26 +447,32 @@
        "0   sample0    TopNController  10      10      15           175000.0   \n",
        "1   sample1    TopNController  10      10      30           175000.0   \n",
        "\n",
-       "   ms1_shift  ms1_agc_target  ms1_max_it  ms1_collision_energy  \\\n",
-       "0        0.0        200000.0       250.0                   0.0   \n",
-       "1        0.0        200000.0       250.0                   0.0   \n",
+       "   ms1_shift initial_exclusion_list  ms1_agc_target  ms1_max_it  ...  \\\n",
+       "0          0                   None          200000         250  ...   \n",
+       "1          0                   None          200000         250  ...   \n",
        "\n",
-       "   ms1_orbitrap_resolution  ms2_agc_target  ms2_max_it  ms2_collision_energy  \\\n",
-       "0                 120000.0         30000.0       100.0                  25.0   \n",
-       "1                 120000.0         30000.0       100.0                  25.0   \n",
+       "   ms1_mass_analyser  ms1_isolation_mode ms2_agc_target ms2_max_it  \\\n",
+       "0           Orbitrap          Quadrupole          30000        100   \n",
+       "1           Orbitrap          Quadrupole          30000        100   \n",
        "\n",
-       "   ms2_orbitrap_resolution  mzmine_peak  \n",
-       "0                   7500.0        129.0  \n",
-       "1                   7500.0        101.0  "
+       "  ms2_collision_energy  ms2_orbitrap_resolution  ms2_activation_type  \\\n",
+       "0                   25                     7500                  HCD   \n",
+       "1                   25                     7500                  HCD   \n",
+       "\n",
+       "   ms2_mass_analyser  ms2_isolation_mode mzmine_peak  \n",
+       "0           Orbitrap          Quadrupole       117.0  \n",
+       "1           Orbitrap          Quadrupole        90.0  \n",
+       "\n",
+       "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vsm = VimmsSequenceManager(None, evaluation_methods, output_dir, progress_bar=True, ms1_picked_peaks_file=ms1_picked_peaks_file)\n",
+    "vsm = VimmsSequenceManager(None, evaluation_methods, output_dir,mzmine_command, progress_bar=True, ms1_picked_peaks_file=ms1_picked_peaks_file)\n",
     "gs = GridSearchExperiment(vsm, 'TopNController', mass_spec_params, dataset_file, topn_variable_params_dict, controller_params, parallel=parallel)\n",
     "gs.results"
    ]
