fixed paths, started new noteboko

--- a/demo/01. Data/03. Generating a set of random chemicals.ipynb
+++ b/demo/01. Data/03. Generating a set of random chemicals.ipynb
@@ -82,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','integration','fixtures'))\n",
+    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','fixtures'))\n",
     "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fullscan.p'))"
    ]
   },
@@ -115,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 114087 DatabaseCompounds from C:\\Users\\Vinny\\work\\vimms\\tests\\integration\\fixtures\\hmdb_compounds.p\n"
+      "Loaded 114087 DatabaseCompounds from /Users/simon/git/vimms/tests/fixtures/hmdb_compounds.p\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,30 +182,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-08-17 11:19:01.805 | DEBUG    | vimms.Chemicals:__init__:242 - Sorting database compounds by masses\n",
-      "2020-08-17 11:19:04.369 | DEBUG    | vimms.Chemicals:sample:276 - 6500 chemicals to be created.\n",
-      "2020-08-17 11:19:05.627 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 0/6500\n",
-      "2020-08-17 11:19:08.278 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 500/6500\n",
-      "2020-08-17 11:19:10.878 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 1000/6500\n",
-      "2020-08-17 11:19:13.914 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 1500/6500\n",
-      "2020-08-17 11:19:17.182 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 2000/6500\n",
-      "2020-08-17 11:19:20.476 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 2500/6500\n",
-      "2020-08-17 11:19:23.746 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 3000/6500\n",
-      "2020-08-17 11:19:27.282 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 3500/6500\n",
-      "2020-08-17 11:19:30.752 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 4000/6500\n",
-      "2020-08-17 11:19:34.322 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 4500/6500\n",
-      "2020-08-17 11:19:38.738 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 5000/6500\n",
-      "2020-08-17 11:19:44.706 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 5500/6500\n",
-      "2020-08-17 11:19:52.105 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 6000/6500\n",
-      "2020-08-17 11:20:20.910 | INFO     | vimms.Common:create_if_not_exist:78 - Created C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\results\\MS1_single\n",
-      "2020-08-17 11:20:20.911 | INFO     | vimms.Common:save_obj:91 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\results\\MS1_single\\hmdb_dataset.p\n"
+      "2020-09-10 19:35:10.620 | DEBUG    | vimms.Chemicals:__init__:209 - Sorting database compounds by masses\n",
+      "2020-09-10 19:35:13.583 | DEBUG    | vimms.Chemicals:sample:244 - 6500 chemicals to be created.\n",
+      "2020-09-10 19:35:14.888 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 0/6500\n",
+      "2020-09-10 19:35:18.066 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 500/6500\n",
+      "2020-09-10 19:35:21.185 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 1000/6500\n",
+      "2020-09-10 19:35:24.383 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 1500/6500\n",
+      "2020-09-10 19:35:27.606 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 2000/6500\n",
+      "2020-09-10 19:35:30.913 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 2500/6500\n",
+      "2020-09-10 19:35:34.052 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 3000/6500\n",
+      "2020-09-10 19:35:37.883 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 3500/6500\n",
+      "2020-09-10 19:35:41.918 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 4000/6500\n",
+      "2020-09-10 19:35:45.480 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 4500/6500\n",
+      "2020-09-10 19:35:49.692 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 5000/6500\n",
+      "2020-09-10 19:35:55.811 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 5500/6500\n",
+      "2020-09-10 19:36:03.364 | DEBUG    | vimms.Chemicals:_sample_formulae:318 - Sampling formula 6000/6500\n",
+      "2020-09-10 19:36:32.778 | INFO     | vimms.Common:create_if_not_exist:149 - Created /Users/simon/git/vimms/demo/01. Data/results/MS1_single\n",
+      "2020-09-10 19:36:32.779 | INFO     | vimms.Common:save_obj:162 - Saving <class 'list'> to /Users/simon/git/vimms/demo/01. Data/results/MS1_single/hmdb_dataset.p\n"
      ]
     }
    ],
@@ -217,23 +217,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KnownChemical - 'C2HCl3O2' rt=582.09 max_intensity=1616270.76\n",
-      "KnownChemical - 'H4Sn' rt=219.42 max_intensity=452090.88\n",
-      "KnownChemical - 'C11H16O9' rt=495.29 max_intensity=299551.79\n",
-      "KnownChemical - 'C25H44O7P2' rt=268.84 max_intensity=283682.78\n",
-      "KnownChemical - 'C7H9N' rt=391.54 max_intensity=1801275.67\n",
-      "KnownChemical - 'C5H6O4' rt=224.69 max_intensity=293003.09\n",
-      "KnownChemical - 'C24H30O6' rt=634.02 max_intensity=2469915.41\n",
-      "KnownChemical - 'C20H14O3' rt=418.58 max_intensity=207972.85\n",
-      "KnownChemical - 'C30H49N6O10' rt=262.84 max_intensity=465245.01\n",
-      "KnownChemical - 'C12H20N4O3' rt=670.49 max_intensity=468316.50\n"
+      "KnownChemical - 'C10H20N2OS' rt=1303.86 max_intensity=752114.64\n",
+      "KnownChemical - 'C17H36' rt=483.17 max_intensity=854236.05\n",
+      "KnownChemical - 'C25H36O2' rt=196.12 max_intensity=918508.13\n",
+      "KnownChemical - 'C12H22O8' rt=478.12 max_intensity=1663121.94\n",
+      "KnownChemical - 'C18H17NO3' rt=734.31 max_intensity=331080.62\n",
+      "KnownChemical - 'C9H9N' rt=903.02 max_intensity=386942.42\n",
+      "KnownChemical - 'C3H7O4P' rt=276.06 max_intensity=965863.16\n",
+      "KnownChemical - 'C15H17NO10' rt=434.00 max_intensity=699439.57\n",
+      "KnownChemical - 'C23H26N2O6' rt=601.19 max_intensity=222509.67\n",
+      "KnownChemical - 'C48H82NO8P' rt=619.80 max_intensity=179245.03\n"
      ]
     }
    ],
@@ -241,6 +241,13 @@
     "for chem in hmdb_dataset[0:10]:\n",
     "    print(chem)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -259,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
